Fixed alignment issues in the profile page

--- a/frontend/src/components/profilepage.css
+++ b/frontend/src/components/profilepage.css
@@ -12,6 +12,9 @@
 .profile-container {
   background: #fff;
 }
+.profile-description-container{
+  display: flex;
+}
 
 .profile-container-outer{
   display: flex;
